# pdfrag_ragproductionapp

./: .gitignore  Notes.txt  README.md  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/c85e16bb-a30e-412e-83d8-7265616b384b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
